<resources>
    <string name="app_name">TroTot</string>
    <string name="home">Home</string>
    <string name="customer">Customer</string>
    <string name="addPost">Add Post</string>
    <string name="householder">Householder</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>