<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/nav_customer"
        android:title="@string/customer"
        android:icon="@drawable/ic_customer" />
    <item
        android:id="@+id/nav_addpost"
        android:title="@string/addPost"
        android:icon="@drawable/ic_addpost"
        />
    <item
        android:id="@+id/nav_householder"
        android:title="@string/householder"
        android:icon="@drawable/ic_householder" />
    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile" />

</menu>